fixed backgorund image not covering entire page

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  height: auto;
 }
 
 body {
